Changelog for statcache.

- Add ability to limit caching by Resource mime-type
- Add skipBinaryContentTypes for skipping Resources with binary Content

statcache 1.1.0-pl (August 25, 2012)
====================================
- Add skipTV property for skipping by a TV
- Add skipIfTagsRemain property for skipping Resources with non-cacheable tags
- Fix resolver for Plugin Events always reporting false

statcache 1.0.0-pl (August 24, 2012)
====================================
- Initial release.