@@ -1,5 +1,6 @@
 Changelog for statcache.
 
+- Add ability to limit caching by ContentType id's
 - Add ability to limit caching by Resource mime-type
 - Add skipBinaryContentTypes for skipping Resources with binary Content
 
